[gd_scene load_steps=17 format=3 uid="uid://bjlnqkiuo6ush"]

[ext_resource type="Texture2D" uid="uid://cghu3ldep4rxc" path="res://Starting screen/Play.png" id="1_ob530"]
[ext_resource type="Script" path="res://Starting screen/starting_screen.gd" id="1_tkq24"]
[ext_resource type="Texture2D" uid="uid://yrruykr6iwt5" path="res://Starting screen/Backroundpic.png" id="1_xmtt7"]
[ext_resource type="Script" path="res://Starting screen/Area2D.gd" id="4_7urje"]
[ext_resource type="AudioStream" uid="uid://k0tsdc700r3j" path="res://Starting screen/Retro Interferences 02.wav" id="4_mhexk"]
[ext_resource type="Texture2D" uid="uid://dnd6yjihnpphr" path="res://Starting screen/Controls.png" id="6_p8f08"]
[ext_resource type="AudioStream" uid="uid://bnyyp3f1rj1rh" path="res://Starting screen/Retro Beeep 20.wav" id="6_qfv8n"]

[sub_resource type="Theme" id="Theme_dfy0a"]

[sub_resource type="LabelSettings" id="LabelSettings_ydssi"]
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_1tc60"]
font_size = 8

[sub_resource type="LabelSettings" id="LabelSettings_okbxk"]
font_size = 8

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s6soo"]
size = Vector2(100, 52)

[sub_resource type="Animation" id="Animation_4ccr8"]
resource_name = "Fade"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_n44rj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_42346"]
resource_name = "button"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Play:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(2, 2, 2),
"update": 0,
"values": [Vector2(128, 200), Vector2(128, 184), Vector2(128, 200)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bf4iq"]
_data = {
"Fade": SubResource("Animation_4ccr8"),
"RESET": SubResource("Animation_n44rj"),
"button": SubResource("Animation_42346")
}

[node name="starting screen" type="Node2D"]
script = ExtResource("1_tkq24")

[node name="Backroundpic" type="Sprite2D" parent="."]
texture_filter = 3
position = Vector2(300, 173.323)
scale = Vector2(0.3125, 0.316068)
texture = ExtResource("1_xmtt7")

[node name="RichTextLabel" type="Label" parent="."]
texture_filter = 3
offset_left = 32.0
offset_top = 36.6486
offset_right = 328.0
offset_bottom = 92.6486
theme = SubResource("Theme_dfy0a")
text = "Perfect Dark"
label_settings = SubResource("LabelSettings_ydssi")

[node name="Label" type="Label" parent="."]
texture_filter = 1
texture_repeat = 2
offset_top = 320.0
offset_right = 86.0
offset_bottom = 346.0
text = "Version 1.1
"
label_settings = SubResource("LabelSettings_1tc60")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 584.0
offset_top = 192.0
offset_right = 624.0
offset_bottom = 344.0
color = Color(0, 0, 0, 1)

[node name="Label2" type="Label" parent="."]
texture_filter = 3
offset_left = 80.0
offset_top = 72.0
offset_right = 145.0
offset_bottom = 95.0
text = "By: Joseph Wood"
label_settings = SubResource("LabelSettings_okbxk")

[node name="Play" type="Sprite2D" parent="."]
texture_filter = 3
position = Vector2(128, 196)
scale = Vector2(2, 1.746)
texture = ExtResource("1_ob530")

[node name="Area2D" type="Area2D" parent="Play"]
position = Vector2(-192, -109.599)
scale = Vector2(0.5, 0.572738)
script = ExtResource("4_7urje")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Play/Area2D"]
position = Vector2(384, 191.37)
shape = SubResource("RectangleShape2D_s6soo")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Play/Area2D"]
root_node = NodePath("../../..")
libraries = {
"": SubResource("AnimationLibrary_bf4iq")
}

[node name="AnimationPlayer2" type="AnimationPlayer" parent="Play/Area2D"]
root_node = NodePath("../../..")
libraries = {
"": SubResource("AnimationLibrary_bf4iq")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Play/Area2D"]
stream = ExtResource("4_mhexk")

[node name="click" type="AudioStreamPlayer2D" parent="Play/Area2D"]
stream = ExtResource("6_qfv8n")

[node name="Label3" type="Label" parent="."]
visible = false
texture_filter = 3
offset_left = 56.0
offset_top = 240.0
offset_right = 209.0
offset_bottom = 266.0
text = "Press S for controls "

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
texture_filter = 3
position = Vector2(300, 172)
scale = Vector2(0.423729, 0.504399)
texture = ExtResource("6_p8f08")

[connection signal="mouse_shape_entered" from="Play/Area2D" to="Play/Area2D" method="_on_mouse_shape_entered"]
[connection signal="mouse_shape_exited" from="Play/Area2D" to="Play/Area2D" method="_on_mouse_shape_exited"]
[connection signal="finished" from="Play/Area2D/click" to="Play/Area2D" method="_on_click_finished"]
